--- a/.github/workflows/BasicWorkflow.yaml
+++ b/.github/workflows/BasicWorkflow.yaml
@@ -5,7 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:16
+    services:
+      mongodb:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: root
     steps:
-      - name: Hello World
-        run: echo "Hello World"
+      - name: Check out
+        run: actions/checkout@v3
       
